Add documentation note on how to use the G1 garbage collector